App: Creates a wrapper div for game actions, fixes visual bug on firefox

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -35,11 +35,14 @@
     }
 }
 
+.actions {
+    width: 320px;
+}
+
 .language {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 260px;
     p {
         font-family: fantasy;
         font-size: 30px;
